<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_texts"
            android:checked="true"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_menu_export"
            android:title="@string/export"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/exit" />

    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/rate_app"
                android:icon="@drawable/ic_menu_rate"
                android:title="@string/rate_app"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
