<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/flash_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/calculator_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/flash_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_calculator"
        android:contentDescription="@string/calculator_plus" />

    <ImageView
        android:id="@+id/calender_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flash_icon"
        app:srcCompat="@drawable/ic_calendar"
        android:contentDescription="@string/calender" />

    <ImageView
        android:id="@+id/my_notes_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/calender_icon"
        app:layout_constraintTop_toBottomOf="@+id/calculator_icon"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_notes"
        android:contentDescription="@string/my_notes" />
</androidx.constraintlayout.widget.ConstraintLayout>